--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "backend_desafio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "ProductManager.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.0",
+    "mongoose": "^7.4.1",
+    "socket.io": "^4.7.1"
   }
 }
