--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon src/app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "CarlosJG",
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.0.0",
